<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string
		name="hello">Hello World, MainActivity!</string>
	<string
		name="app_name">縦書きビューアー</string>
	<string
		name="activity_animation_duration">300</string>
	<string
		name="button_start">START</string>
	<string
		name="button_close">CLOSE</string>
	<string
		name="button_edit">EDIT</string>
	<string
		name="button_ok">OK</string>
	<string
		name="button_cancel">CANCEL</string>
	<string
		name="nodata">表示するデータがありません。</string>
	<string
		name="intent_next_posit">NEXT_POSIT</string>
	<string
		name="intent_media_id">MEDIA_ID</string>
	<string
		name="intent_media_name">MEDIA_NAME</string>
	<string
		name="intent_content_index">CONTENT_INDEX</string>
	<string
		name="intent_current_page_num">CURRENT_PAGE_NUM</string>
	<string
		name="intent_general_page_num">GENERAL_PAGE_INDEX</string>
	<string
		name="intent_image_path">IMAGE_PATH</string>
	<string
		name="intent_request_url">REQUEST_URL</string>
	<string
		name="intent_content_list_index">CONTENT_LIST_INDEX</string>
	<string
		name="intent_media_list_index">MEDIA_LIST_INDEX</string>
	<string
		name="main_title">縦書きビューアー</string>
	<string
		name="title_contents">目次</string>
	<string
		name="title_image_gallary">関連画像</string>
	<string
		name="title_bookmark">ブックマーク</string>
	<string
		name="title_bookmark_delete">ブックマーク削除</string>
	<string
		name="title_epub_delete">EPUB削除</string>
	<string
		name="title_preference">設定</string>
	<string
		name="msg_no_image">関連画像はありません。</string>
	<string
		name="msg_hint_url">URLを入力してください。</string>
	<string
		name="msg_hint_name">Bookmark名を入力してください。</string>
	<string
		name="msg_err_name_url">名前もしくは場所が入力されていません。</string>
	<string
		name="msg_app_end">アプリを終了します。よろしいですか？</string>
	<string
		name="msg_bookmark_delete">ブックマークを削除します。よろしいですか？</string>
	<string
		name="msg_epub_delete">EPUBを削除します。よろしいですか？</string>
	<string
		name="msg_exist_image">[画像あり]</string>
	<string
		name="option_main_menu">ホーム</string>
	<string
		name="option_sub_menu">目次</string>
	<string
		name="option_download">ダウンロード</string>
	<string
		name="option_settings">設定</string>
	<string
		name="option_bookmark_new">ブックマーク登録</string>
	<string
		name="option_bookmark_manager">ブックマーク</string>
	<string
		name="option_close">閉じる</string>
	<string
		name="option_quit">終了</string>
	<string
		name="context_edit">編集</string>
	<string
		name="context_delete">削除</string>
	<string
		name="str_jp_name">名前</string>
	<string
		name="str_jp_place">場所</string>
	<string
		name="preference_font_size">preference_font_size</string>
	<string
		name="title_preferece_font_size">フォントサイズ</string>
	<string
		name="dialog_title_preference_font_size">フォントサイズ</string>
	<string
		name="preference_block_num">preference_block_num</string>
	<string
		name="title_preference_block_num">段数</string>
	<string
		name="dialog_title_preference_block_num">段数</string>
	<string
		name="preference_page_sending">preference_page_sending</string>
	<string
		name="title_preference_page_sending">ページ送りタップ位置</string>
	<string
		name="dialog_title_preference_page_sending">ページ送りタップ位置</string>
	<string
		name="preference_back_and_char_color">preference_back_and_char_color</string>
	<string
		name="title_preference_back_and_char_color">背景色と文字色</string>
	<string
		name="dialog_title_preference_back_and_char_color">背景色と文字色</string>
	<string
		name="preference_version_dialog">preference_version_dialog</string>
	<string
		name="title_preference_version_dialog">バージョン情報</string>
	<string
		name="msg_preference_version_dialog">ver.</string>
	<string
		name="font_size_large">30</string>
	<string
		name="font_size_medium">24</string>
	<string
		name="font_size_small">18</string>
	<string
		name="msg_progress_download">ダウンロード中...</string>
	<string
		name="msg_progress_load">読み込み中...</string>
</resources>
