<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_root"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/layout_bookmark_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="5dp">
		<TextView
			android:id="@+id/text_bookmark_name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="16dp"
			android:text="@string/str_jp_name"></TextView>
		<EditText
			android:id="@+id/edittext_bookmark_name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:textSize="16dp"
			android:hint="@string/msg_hint_name"></EditText>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/layout_bookmark_place"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="5dp">
		<TextView
			android:id="@+id/text_bookmark_place"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="16dp"
			android:text="@string/str_jp_place"></TextView>
		<EditText
			android:id="@+id/edittext_bookmark_place"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="@android:style/TextAppearance.Medium"
			android:inputType="textUri"
			android:hint="@string/msg_hint_url"></EditText>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/footer"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="3dp"
		android:background="@color/lightgrey">
		<Button
			android:id="@+id/btn_ok"
			android:text="@android:string/ok"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<Button
			android:id="@+id/btn_cancel"
			android:text="@android:string/cancel"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>